# knapsack_app

./: .gitignore  CMakeLists.txt  README.md
docs/: README_copy.md  solutions_report.md
docs/doxygen/: Doxyfile
docs/doxygen/html/: annotated.html  annotated_dup.js  backtracking_8cpp.html  backtracking_8cpp.js  backtracking_8h.html  backtracking_8h.js  backtracking_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d0381950fc41278198232cb047ffc1f9.html  dir_d0381950fc41278198232cb047ffc1f9.js  dir_d429893c1feff46fb6570f8eac336791.html  dir_d429893c1feff46fb6570f8eac336791.js  dir_e6df591b0639d4c4807ef64d058833e2.html  dir_e6df591b0639d4c4807ef64d058833e2.js  dynamicprog_8cpp.html  dynamicprog_8cpp.js  dynamicprog_8h.html  dynamicprog_8h.js  dynamicprog_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  greedy_8cpp.html  greedy_8cpp.js  greedy_8h.html  greedy_8h.js  greedy_8h_source.html  ilp_8cpp.html  ilp_8cpp.js  ilp_8h.html  ilp_8h.js  ilp_8h_source.html  index.html  jquery.js  knapsack__solver_8py.html  knapsack__solver_8py.js  (+27 more)
docs/doxygen/latex/: annotated.tex  backtracking_8cpp.tex  backtracking_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d0381950fc41278198232cb047ffc1f9.tex  dir_d429893c1feff46fb6570f8eac336791.tex  (+20 more)
src/: main.cpp
src/algorithms/: backtracking.cpp  dynamicprog.cpp  greedy.cpp  ilp.cpp
src/headers/: backtracking.h  dynamicprog.h  greedy.h  ilp.h  menu.h  parsing.h  structs.h
src/other/: menu.cpp  parsing.cpp
(+51 files in other folders)
